--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,6 @@ body {
     background-color: rgb(57, 78, 91);
 }
 
-h1 {
-    font-size: 54px;
-}
-
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -28,36 +24,15 @@ h1 {
     padding: 40px;
 }
 
-.main {
+.header {
     display: flex;
     flex-direction: column;
-}
-
-#gameboard {
-    width: 450px;
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: 40px;
-}
-
-.box {
-    height: 150px;
-    width: 150px;
-    display: flex;
-    align-items: center;
     justify-content: center;
-    color: var(--color-one);
-    font-size: 120px;
-    border-right: 2px solid;
-    border-bottom: 2px solid;
+    align-items: center;
 }
 
-.box:nth-child(3n) {
-    border-right: none;
-}
-
-.box:nth-last-child(-n+3) {
-    border-bottom: none;
+.header > h1 {
+    font-size: 54px;
 }
 
 button {
@@ -74,4 +49,39 @@ button {
 button:hover {
     cursor: pointer;
     transform: scale(1.05);
+}
+
+#boxes {
+    width: 450px;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 40px;
+}
+
+.box {
+    height: 150px;
+    width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-one);
+    font-size: 120px;
+    border: 2px solid;
+    cursor: pointer;
+}
+
+#boxes .box:nth-child(-n+3) {
+    border-top: none;
+}
+
+#boxes .box:nth-child(3n) {
+    border-right: none;
+}
+
+#boxes .box:nth-last-child(-n+3) {
+    border-bottom: none;
+}
+
+#boxes .box:nth-child(3n - 2) {
+    border-left: none;
 }
